[metadata]
name = dyservice
summary = dyservice http rest api
version = 1.0.0
description-file =
    README.md
author = dy
author-email = mlb@e3t.net.cn
home-page = https://mlb%40e3t.net.cn:hn%40123654789@gitee.com/ylhlgo/k-idc.git
classifier =
    Environment :: Wahaha
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7


[files]
packages =
    dyservice
data_files =
    /etc/dyservice =
        etc/api-config.conf
        etc/api-logging.conf
        etc/api-config.ini

[extras]
mysql =
    PyMySQL>=0.6.2 # MIT License


[entry_points]
console_scripts =
    dyservice = dyservice.api.server:launch

[pbr]
warnerrors = True

